--- a/starcraft2.html
+++ b/starcraft2.html
@@ -154,7 +154,7 @@
 
 <hr/><hr/>
 
-参考资料：<br/><a href="https://zh.wikipedia.org/wiki/%E6%98%9F%E6%B5%B7%E7%88%AD%E9%9C%B8II%EF%BC%9A%E8%87%AA%E7%94%B1%E4%B9%8B%E7%BF%BC">星际争霸II：自由之翼 维基百科</a>
+<del>抄袭</del>参考资料：<br/><a href="https://zh.wikipedia.org/wiki/%E6%98%9F%E6%B5%B7%E7%88%AD%E9%9C%B8II%EF%BC%9A%E8%87%AA%E7%94%B1%E4%B9%8B%E7%BF%BC">星际争霸II：自由之翼 维基百科</a>
 <br/><a href="https://zh.wikipedia.org/wiki/%E6%98%9F%E9%99%85%E4%BA%89%E9%9C%B8II%EF%BC%9A%E8%99%AB%E7%BE%A4%E4%B9%8B%E5%BF%83">星际争霸II：虫群之心 维基百科</a>
 <br/><a href="https://zh.wikipedia.org/wiki/%E6%98%9F%E9%99%85%E4%BA%89%E9%9C%B8II%EF%BC%9A%E8%99%9A%E7%A9%BA%E4%B9%8B%E9%81%97">星际争霸II：虚空之遗 维基百科</a>
 <br/>
